5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1671_1872.log
== SUBMITION (2019-04-29 22:55:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


input("Digite o valor da coordenada X: ")
print("x")
input("Digite o valor da coordenada Y: ")
print("y")

if (x>0) and (y>0):
print(O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante)
elif (x<0) and (y>0): 
print (O ponto x="+x+" e y="+y+" pertence ao segundo quadrante)
elif (x<0) and (y<0):
print(O ponto x="+x+" e y="+y+" pertence ao terceiro quadrante)
elif (x>0) and (y<0):
print (O ponto x="+x+" e y="+y+" pertence ao quarto quadrante)
elif (x =0) and (y<>0):
print(O ponto x="+x+" e y="+y+" está em eixo X)
elif (y=0) and (x<>0):
print(O ponto x="+x+" e y="+y+" está em eixo Y)
else (x=0) and (y=0): 
print(O ponto x="+x+" e Y="+y+" está no ponto de origem)
-- EXECUTION TIME:
0.140443
-- ERROR:
  File "/home/codebench/codes/1671/1872/main.py", line 10
    print(O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 22:55:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


input("Digite o valor da coordenada X: ")
print("x")
input("Digite o valor da coordenada Y: ")
print("y")

if (x>0) and (y>0):
print(O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante)
elif (x<0) and (y>0): 
print (O ponto x="+x+" e y="+y+" pertence ao segundo quadrante)
elif (x<0) and (y<0):
print(O ponto x="+x+" e y="+y+" pertence ao terceiro quadrante)
elif (x>0) and (y<0):
print (O ponto x="+x+" e y="+y+" pertence ao quarto quadrante)
elif (x =0) and (y<>0):
print(O ponto x="+x+" e y="+y+" está em eixo X)
elif (y=0) and (x<>0):
print(O ponto x="+x+" e y="+y+" está em eixo Y)
else (x=0) and (y=0): 
print(O ponto x="+x+" e Y="+y+" está no ponto de origem)
-- ERROR:
File "XXXX", line 10
    print(O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 22:55:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


input("Digite o valor da coordenada X: ")
print("x")
input("Digite o valor da coordenada Y: ")
print("y")

if (x>0) and (y>0):
print("O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante")
elif (x<0) and (y>0): 
print (O ponto x="+x+" e y="+y+" pertence ao segundo quadrante)
elif (x<0) and (y<0):
print(O ponto x="+x+" e y="+y+" pertence ao terceiro quadrante)
elif (x>0) and (y<0):
print (O ponto x="+x+" e y="+y+" pertence ao quarto quadrante)
elif (x =0) and (y<>0):
print(O ponto x="+x+" e y="+y+" está em eixo X)
elif (y=0) and (x<>0):
print(O ponto x="+x+" e y="+y+" está em eixo Y)
else (x=0) and (y=0): 
print(O ponto x="+x+" e Y="+y+" está no ponto de origem)
-- EXECUTION TIME:
0.192947
-- ERROR:
  File "/home/codebench/codes/1671/1872/main.py", line 10
    print("O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 22:55:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


input("Digite o valor da coordenada X: ")
print("x")
input("Digite o valor da coordenada Y: ")
print("y")

if (x>0) and (y>0):
print("O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante")
elif (x<0) and (y>0): 
print (O ponto x="+x+" e y="+y+" pertence ao segundo quadrante)
elif (x<0) and (y<0):
print(O ponto x="+x+" e y="+y+" pertence ao terceiro quadrante)
elif (x>0) and (y<0):
print (O ponto x="+x+" e y="+y+" pertence ao quarto quadrante)
elif (x =0) and (y<>0):
print(O ponto x="+x+" e y="+y+" está em eixo X)
elif (y=0) and (x<>0):
print(O ponto x="+x+" e y="+y+" está em eixo Y)
else (x=0) and (y=0): 
print(O ponto x="+x+" e Y="+y+" está no ponto de origem)
-- ERROR:
File "XXXX", line 10
    print("O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 22:55:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


input("Digite o valor da coordenada X: ")
print("x")
input("Digite o valor da coordenada Y: ")
print("y")

if (x>0) and (y>0):
print(O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante)
elif (x<0) and (y>0): 
print (O ponto x="+x+" e y="+y+" pertence ao segundo quadrante)
elif (x<0) and (y<0):
print(O ponto x="+x+" e y="+y+" pertence ao terceiro quadrante)
elif (x>0) and (y<0):
print (O ponto x="+x+" e y="+y+" pertence ao quarto quadrante)
elif (x =0) and (y<>0):
print(O ponto x="+x+" e y="+y+" está em eixo X)
elif (y=0) and (x<>0):
print(O ponto x="+x+" e y="+y+" está em eixo Y)
else (x=0) and (y=0): 
print(O ponto x="+x+" e Y="+y+" está no ponto de origem)
-- ERROR:
File "XXXX", line 10
    print(O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 22:56:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


input("Digite o valor da coordenada X: ")
print("x")
input("Digite o valor da coordenada Y: ")
print("y")

if (x>0) and (y>0):
print(O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante)
elif (x<0) and (y>0): 
print (O ponto x="+x+" e y="+y+" pertence ao segundo quadrante)
elif (x<0) and (y<0):
print(O ponto x="+x+" e y="+y+" pertence ao terceiro quadrante)
elif (x>0) and (y<0):
print (O ponto x="+x+" e y="+y+" pertence ao quarto quadrante)
elif (x =0) and (y<>0):
print(O ponto x="+x+" e y="+y+" esta em eixo X)
elif (y=0) and (x<>0):
print(O ponto x="+x+" e y="+y+" esta em eixo Y)
else (x=0) and (y=0): 
print(O ponto x="+x+" e Y="+y+" esta no ponto de origem)
-- ERROR:
File "XXXX", line 10
    print(O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 22:56:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


input("Digite o valor da coordenada X: ")
print("x")
input("Digite o valor da coordenada Y: ")
print("y")

if (x>0) and (y>0):
print(O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante)
elif (x<0) and (y>0): 
print (O ponto x="+x+" e y="+y+" pertence ao segundo quadrante)
elif (x<0) and (y<0):
print(O ponto x="+x+" e y="+y+" pertence ao terceiro quadrante)
elif (x>0) and (y<0):
print (O ponto x="+x+" e y="+y+" pertence ao quarto quadrante)
elif (x =0) and (y<>0):
print(O ponto x="+x+" e y="+y+" esta em eixo X)
elif (y=0) and (x<>0):
print(O ponto x="+x+" e y="+y+" esta em eixo Y)
else (x=0) and (y=0): 
print(O ponto x="+x+" e Y="+y+" esta no ponto de origem)
-- EXECUTION TIME:
0.204001
-- ERROR:
  File "/home/codebench/codes/1671/1872/main.py", line 10
    print(O ponto x="+x+" e y="+y+" pertence ao primeiro quadrante)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:02:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


input("Digite o valor da coordenada X: ")
print("x")
input("Digite o valor da coordenada Y: ")
print("y")

if (x>0) and (y>0):
print(O ponto x="+x+" e y="+y+" pertence ao Q1)
elif (x<0) and (y>0): 
print (O ponto x="+x+" e y="+y+" pertence ao Q2)
elif (x<0) and (y<0):
print(O ponto x="+x+" e y="+y+" pertence ao Q3)
elif (x>0) and (y<0):
print (O ponto x="+x+" e y="+y+" pertence ao Q4)
elif (x =0) and (y<>0):
print(O ponto x="+x+" e y="+y+" esta em Eixo X)
elif (y=0) and (x<>0):
print(O ponto x="+x+" e y="+y+" esta em Eixo Y)
else (x=0) and (y=0): 
print(O ponto x="+x+" e Y="+y+" esta no Origem)
-- EXECUTION TIME:
0.193696
-- ERROR:
  File "/home/codebench/codes/1671/1872/main.py", line 10
    print(O ponto x="+x+" e y="+y+" pertence ao Q1)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:02:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


input("Digite o valor da coordenada X: ")
print("x")
input("Digite o valor da coordenada Y: ")
print("y")

if (x>0) and (y>0):
print(O ponto x="+x+" e y="+y+" pertence ao Q1)
elif (x<0) and (y>0): 
print (O ponto x="+x+" e y="+y+" pertence ao Q2)
elif (x<0) and (y<0):
print(O ponto x="+x+" e y="+y+" pertence ao Q3)
elif (x>0) and (y<0):
print (O ponto x="+x+" e y="+y+" pertence ao Q4)
elif (x =0) and (y<>0):
print(O ponto x="+x+" e y="+y+" esta em Eixo X)
elif (y=0) and (x<>0):
print(O ponto x="+x+" e y="+y+" esta em Eixo Y)
else (x=0) and (y=0): 
print(O ponto x="+x+" e Y="+y+" esta no Origem)
-- ERROR:
File "XXXX", line 10
    print(O ponto x="+x+" e y="+y+" pertence ao Q1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:04:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


p = input().split()
x, y = p

x = float(x)
y = float(y)

if x == 0:
    if y == 0:
      print('Origem')
   if y != 0:
        print('Eixo Y')
if y == 0:
    if x != 0:
      print('Eixo X')
if x > 0:
    if y > 0:
      print('Q1')
   if y < 0:
        print('Q4')
if x < 0:
    if y > 0:
      print('Q2')
   if y < 0:
        print('Q3')
-- EXECUTION TIME:
0.154964
-- ERROR:
  File "/home/codebench/codes/1671/1872/main.py", line 13
    if y != 0:
             ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:04:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


p = input().split()
x, y = p

x = float(x)
y = float(y)

if x == 0:
    if y == 0:
      print('Origem')
   if y != 0:
        print('Eixo Y')
if y == 0:
    if x != 0:
      print('Eixo X')
if x > 0:
    if y > 0:
      print('Q1')
   if y < 0:
        print('Q4')
if x < 0:
    if y > 0:
      print('Q2')
   if y < 0:
        print('Q3')
-- ERROR:
File "XXXX", line 13
    if y != 0:
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:05:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


p = input().split()
x, y = p

x = float(x)
y = float(y)

if x == 0:
    elif y == 0:
      print('Origem')
   elif y != 0:
        print('Eixo Y')
if y == 0:
    elif x != 0:
      print('Eixo X')
if x > 0:
    if y > 0:
      print('Q1')
   if y < 0:
        print('Q4')
if x < 0:
    if y > 0:
      print('Q2')
   if y < 0:
        print('Q3')
-- EXECUTION TIME:
0.144193
-- ERROR:
  File "/home/codebench/codes/1671/1872/main.py", line 11
    elif y == 0:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:05:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.


p = input().split()
x, y = p

x = float(x)
y = float(y)

if x == 0:
    elif y == 0:
      print('Origem')
   elif y != 0:
        print('Eixo Y')
if y == 0:
    elif x != 0:
      print('Eixo X')
if x > 0:
    if y > 0:
      print('Q1')
   if y < 0:
        print('Q4')
if x < 0:
    if y > 0:
      print('Q2')
   if y < 0:
        print('Q3')
-- ERROR:
File "XXXX", line 11
    elif y == 0:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
